--- a/src/autoServiceApi/src/main/resources/application.properties
+++ b/src/autoServiceApi/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#server.port=8080
 
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.username=root
+spring.datasource.password=root
