Make server grait again

--- a/src/autoServiceApi/src/main/resources/application.properties
+++ b/src/autoServiceApi/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
